# LiDAR-Automatic-Calibration

./: .gitattributes  CMakeLists.txt  README.md
LICENSE.md/: LICENSE.md
data/: Init_Matrix.txt  T_Matrix.txt  parameters.txt
include/: Base.h  PointCloudMapper.h  common.h
include/geometry_utils/: VectorNBase.h
src/: Base.cpp  PointCloudMapper.cpp  main.cpp  main.cpp~
